--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- Retitled -->
+    <title>Horiseon - Tools for Your Business</title>
 </head>
 
 <body>
-    <div class="header">
+    <!--Header Start-->
+    <!--Replaced the opening div with the <header> semantic tag, updated CSS-->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!--Changed This Div to <nav>-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +26,9 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+    <!--Header End-->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
