--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,8 +29,13 @@
         </nav>
     </header>
     <!--Header End-->
+
+    <!--Hero Image-->
     <div class="hero"></div>
-    <div class="content">
+
+
+    <!--Content-->
+    <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -53,6 +58,8 @@
             </p>
         </div>
     </div>
+    
+    <!--Benefits-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -76,12 +83,14 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+
+    <!--Footer-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
