Finalized HTML + CSS, updated readme

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <!--Header Start-->
-    <!--Replaced the opening div with the <header> semantic tag, updated CSS-->
+    <!--replaced with <header>-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!--Changed This Div to <nav>-->
+        <!--replaced with <nav>-->
         <nav>
             <ul>
                 <li>
@@ -35,8 +35,10 @@
 
 
     <!--Content-->
+    <!--Reworked Class and IDs, added alt text, replaced with <section>-->
     <section>
         <div id ="search-engine-optimization">
+            <!--added alt tags-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -60,24 +62,26 @@
     </section>
     
     <!--Benefits-->
+    <!--replaced with <article>-->
     <article>
         <div>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <!--added alt tags-->
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png"  alt="Cost Mangement"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -85,8 +89,9 @@
     </article>
 
     <!--Footer-->
+    <!--Replaced with <footer>-->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
